--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,14 +5,22 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "vitrea"
 version = "0.1.0"
-description = "Python package encapsulating Vitrea functionality."
+description = "Python package encapsulating Vitrea box communication protocol."
 authors = [
-    { name = "Your Name", email = "your.email@example.com" }
+    { name = "SK developper", email = "skappdevel@gmail.com" }
 ]
 readme = "README.md"
 license = { file = "LICENSE" }
 requires-python = ">=3.8"
+keywords = ["home automation", "vitrea", "home assistant"]
+classifiers = [
+    "Programming Language :: Python :: 3",
+    "License :: OSI Approved :: MIT License",
+    "Operating System :: OS Independent",
+]
 
 [project.urls]
-Homepage = "https://github.com/yourusername/vitrea"
+Homepage = "https://github.com/solangek/vitrea-py"
 
+[tool.setuptools.packages.find]
+where = ["src"]
